made the images show up if they are 10% visible to avoid blank spaces and added a margin to the bottom of the pages

--- a/src/features/gallery/components/grid-gallery/style.module.css
+++ b/src/features/gallery/components/grid-gallery/style.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    padding-block-end: var(--padding-x2large);
 }
 
 .buttonContainer {
